--- a/pom.xml
+++ b/pom.xml
@@ -13,30 +13,30 @@
             <plugin>
                 <groupId>com.github.kongchen</groupId>
                 <artifactId>swagger-maven-plugin</artifactId>
-                <version>3.1.1-SNAPSHOT</version>
+                <version>3.1.0</version>
                 <configuration>
                     <apiSources>
                       <apiSource>
-                            <springmvc>false</springmvc>
-                            <locations>com.github.kongchen.swagger.sample.wordnik.resource</locations>
+                            <springmvc>true</springmvc>
+                            <locations>com.resource.AccountResource</locations>
                             <schemes>http,https</schemes>
-                            <host>petstore.swagger.wordnik.com</host>
+                            <host>sample.com</host>
                             <basePath>/api</basePath>
                             <info>
-                                <title>Swagger Maven Plugin Sample</title>
+                                <title>Swagger Maven Plugin Spring MVC working example</title>
                                 <version>v1</version>
-                                <description>This is a sample for swagger-maven-plugin</description>
+                                <description>Working sample of Spring MVC annotations</description>
                                 <termsOfService>
-                                    http://www.github.com/kongchen/swagger-maven-plugin
+                                    http://www.github.com
                                 </termsOfService>
                                 <contact>
-                                    <email>kongchen@gmail.com</email>
-                                    <name>Kong Chen</name>
-                                    <url>http://kongch.com</url>
+                                    <email>your@email.com</email>
+                                    <name>Name Surname</name>
+                                    <url>http</url>
                                 </contact>
                                 <license>
-                                    <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-                                    <name>Apache 2.0</name>
+                                    <url>http://www.license.com</url>
+                                    <name>License name</name>
                                 </license>
                             </info>
                             <!-- Support classpath or file absolute path here.
@@ -45,12 +45,8 @@
                                 "${basedir}/src/main/resources/template/hello.html" -->
                             <templatePath>${basedir}/templates/strapdown.html.hbs</templatePath>
                             <outputPath>${basedir}/generated/document.html</outputPath>
+
                             <swaggerDirectory>generated/swagger-ui</swaggerDirectory>
-                            <securityDefinitions>
-                                <securityDefinition>
-                                    <json>/securityDefinitions.json</json>
-                                </securityDefinition>
-                            </securityDefinitions>
                         </apiSource>
                     </apiSources>
                 </configuration>
@@ -80,44 +76,37 @@
         </plugins>
     </build>
     <dependencies>
+
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-core</artifactId>
-            <scope>compile</scope>
-            <version>1.5.3</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.ws.rs</groupId>
-                    <artifactId>jsr311-api</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>3.2.8.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.kongchen</groupId>
+            <artifactId>swagger-maven-plugin</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-core</artifactId>
+        <scope>compile</scope>
+        <version>1.5.3</version>
+        <exclusions>
+            <exclusion>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>jsr311-api</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback-version}</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>${logback-version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet-core</artifactId>
-            <version>${jersey2-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-multipart</artifactId>
-            <version>${jersey2-version}</version>
         </dependency>
     </dependencies>
     <properties>
@@ -125,16 +114,5 @@
         <jersey2-version>2.4.1</jersey2-version>
         <logback-version>1.0.1</logback-version>
     </properties>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>sonatype-snapshot</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
+
 </project>
