--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                                 <contact>
                                     <email>your@email.com</email>
                                     <name>Name Surname</name>
-                                    <url>http</url>
+                                    <url>http://localhost</url>
                                 </contact>
                                 <license>
                                     <url>http://www.license.com</url>
